# Quant-Portfolio-Tool

./: .bash_profile  .coverage  .flake8  .gitignore  .pre-commit-config.yaml  coverage.xml  pyproject.toml  readme.md  tox.ini
.github/workflows/: check.yml
alphas/: alpha_builder.py  alpha_builder_utils.py  alpha_functions.py  alpha_generator.py  alpha_utils.py  readme.md  transforms.py
data/: cache_data.py  data_utils.py  r3k_tickers.txt  readme.md
ml/: readme.md
models/: readme.md
optimizations/: readme.md
portfolio/: readme.md
portfolio_stats/: math_functions.py  readme.md
research/: Hurst_Exponent_Calculator.ipynb  Momentum_Trading_Lookbacks.ipynb  Pairs_Trading_Cointegration.ipynb
tests/: math_functions_test.py  readme.md
utils/: readme.md
