[tool.poetry]
name = "quant-strategies"
version = "0.1.0"
description = "Quantitative Portfolio Management Tool"
authors = ["Anthony Givans, Marcus Stevens, Yash Patel, Matthew Mione, Andrew Lahrheim, Sabian Saliasi"]
license = "MIT"
readme = "README.md"
packages = [{include = "quant_strategies"}]

[tool.poetry.dependencies]
python = ">=3.10"
coverage = "^7.2.7"
numpy = "^1.25.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
black = "^23.7.0"
pre-commit = "^3.3.3"
tox = "^4.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
